<resources>
    <string name="app_name">Prayer_Bank</string>
    <string name="praybutton">prayButton</string>
    <string name="homebutton">homebutton</string>
    <string name="mypagebutton">mypagebutton</string>
    <string name="summarybutton">summarybutton</string>
    <string name="calendarbutton">calendarbutton</string>
    <string name="categorybutton">categorybutton</string>
    <string name="my_prayer_bank">MY PRAYER BANK</string>
    <string name="calendar">CALENDAR</string>
    <string name="diary">diary</string>
    <string name="my_page">MY PAGE</string>
    <string name="profile">profile</string>
    <string name="nickname">Nickname</string>
    <string name="edit">EDIT</string>
    <string name="alarm">Alarm</string>
    <string name="goal">Goal</string>
    <string name="settings">Settings</string>
    <string name="alarmbutton">alarmbutton</string>
    <string name="goalbutton">goalbutton</string>
    <string name="settingsbutton">settingsbutton</string>
    <string name="categories">CATEGORIES</string>
    <string name="me">ME</string>
    <string name="family">FAMILY</string>
    <string name="friends">FRIENDS</string>
    <string name="todays_report">Today\'s report</string>
    <string name="prayer_topics">Prayer topics</string>
    <string name="thanksgiving">Thanksgiving</string>
    <string name="faivorites">Favorites</string>
    <string name="this_week">This week</string>
    <string name="good_text1">You did a really good job! \n I’m so proud of you. \n Thank you for giving your time to me :)</string>
    <string name="motivate_text1">Come on, you can reach the goal!\n \nWatch and pray so that you will not fall
into temptation. The spirit is willing, but the body is weak. (Matthew 26:41)</string>
    <string name="smile_jesus">smile Jesus</string>
    <string name="sad_jesus">sad Jesus</string>
    <string name="round_square">round_square</string>
    <string name="todays_prayer">TODAY\'S PRAYER</string>
    <string name="write_down">Write down your prayer title</string>
    <string name="thanks_of_day">THANKS OF THE DAY</string>
    <string name="leftButton">left button</string>
    <string name="rightButton">right button</string>
    <string name="today">Today</string>
    <string name="prayer_status">MY PRAYER STATUS</string>
    <string name="summary">SUMMARY</string>
    <string name="heart">HEART</string>
    <string name="pencil">pencil</string>
    <string name="check_diary">Check diary!</string>
    <dimen name="write_rl">25dp</dimen>
    <dimen name="write_tb">25dp</dimen>
    <string name="today_id">today_id</string>
    <string name="when_date">when_date</string>
    <string name="save">Save</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="prayer_bank">PRAYER BANK</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="musicbutton">musicbutton</string>
    <string name="my_prayer_status">MY PRAYER STATUS</string>
    <string name="plus">+</string>
    <string name="colon">:</string>
    <string name="thanks_of_the_day" />
    <string name="see">view</string>
    <string name="delete">delete</string>
    <string name="revise">revise(수정)</string>
    <string name="set_alarm">Set alarm</string>
    <string name="ok">OK</string>
</resources>