<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:width="303dp"
    android:height="449dp"
    android:background="#E0EFF3"
    android:viewportWidth="303"
    android:viewportHeight="449"

    tools:context=".Write_thanksgiving">

    <!-- Write Prayer -->
    <EditText
        android:id="@+id/editCategory2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/write_pt"
        android:layout_below="@id/when_date"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/write_rl"
        android:layout_marginEnd="@dimen/write_rl"
        android:layout_marginBottom="@dimen/write_tb"
        android:layout_toEndOf="@+id/when_date"
        android:ems="10"
        android:gravity="top|center_horizontal"
        android:inputType="textPersonName"
        android:maxWidth="100dp"
        android:maxHeight="50dp"
        android:text="@string/categories" />

    <TextView
        android:id="@+id/when_date"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="@dimen/write_rl"
        android:layout_marginTop="@dimen/write_tb"
        android:gravity="start|top"
        android:text="@string/when_date"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/write_pt"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_above="@+id/btn_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/write_rl"
        android:layout_marginTop="@dimen/write_tb"
        android:layout_marginEnd="@dimen/write_rl"
        android:layout_marginBottom="@dimen/write_tb"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_down"
        android:inputType="textMultiLine"
        android:maxWidth="700dp"
        android:maxHeight="700dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id = "@+id/btn_layout"
        android:layout_alignParentBottom="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/save"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</RelativeLayout>