<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:width="303dp"
    android:height="449dp"
    android:background="#E0EFF3"
    android:viewportWidth="303"
    android:viewportHeight="449"
    android:orientation="vertical"
    tools:context=".View_pt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/when_date1"
            android:layout_width="69dp"
            android:layout_height="16dp"
            android:gravity="start|top"
            android:layout_marginStart="@dimen/write_rl"
            android:layout_marginTop="@dimen/write_tb"
            android:text="@string/when_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/view_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="text"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/prayer_topics"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_prayer_topic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_list_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="back"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/re_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/revise"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="#4CAF50" />
    </LinearLayout>

</LinearLayout>