<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Summary">

    <View
        android:id="@+id/divider"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginTop="19dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />
    <View
        android:id="@+id/divider8"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/prayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/prayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="162dp"
        android:layout_marginBottom="93dp"
        android:text="@string/today"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/my_progressbar"
        app:layout_constraintBottom_toTopOf="@id/chart_Layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="162dp"
        android:layout_marginBottom="120dp"
        android:text="@string/goal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/chart_Layout"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/this_week"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/chart_Layout"
        app:layout_constraintStart_toStartOf="@+id/chart_Layout"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="214dp"
        android:layout_height="148dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="89dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/chart_Layout"
        app:layout_constraintVertical_bias="0.61">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            android:contentDescription="@string/round_square"
            app:srcCompat="@drawable/round_square"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/good_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/good_text1"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/motivate_text1"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:padding="5dp"
            android:text="@string/motivate_text1"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:visibility="visible"
            tools:ignore="HardcodedText,SmallSp, SpUsage" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/chart_Layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="235dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chart_week"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="123dp"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/divider8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@id/chart_Layout">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/smile_jesus"
            android:visibility="gone"
            app:srcCompat="@drawable/img_1006"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sad_jesus"
            android:visibility="visible"
            app:srcCompat="@drawable/img_1007"
            tools:ignore="ContentDescription" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/prayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="praybutton"
        android:maxHeight="43dp"
        android:minHeight="45dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/img_1008"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="homebutton"
        android:maxHeight="43dp"
        android:minHeight="45dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/home"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/mypageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="mypagebutton"
        android:maxHeight="43dp"
        android:minHeight="45dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/person_crop_circle"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/summaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="summarybutton"
        android:maxHeight="43dp"
        android:minHeight="45dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mypageButton"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/prayButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/graph_square_fill"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />


    <ImageButton
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="calendarbutton"
        android:maxHeight="43dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prayButton"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/event"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>